# WebScraper

./: .replit  README.md  WINDOWS_SETUP.md  adapters.py  api_app.py  app.py  config.py  contact_extractor.py  main.py  models.py  package-lock.json  package.json  pyproject.toml  real_time_scraper.py  replit.md  scraper_engine.py  serve_frontend.py  simple_api.py  tasks.py  unified_app.py  w.md
adapters/: business_directory.json  default.json  indeed.json  linkedin.json
attached_assets/: ultimate_scraper_plan_1756314672441.md
backend/: app.py
backend/controllers/: admin_controller.py  api_controller.py  scraper_controller.py
backend/models/: database.py  scraper_model.py
backend/services/: contact_extractor.py  scraper_service.py
backend/templates/: base.html  index.html  jobs.html  results.html
backend/templates/admin/: adapters.html  dashboard.html  jobs.html  settings.html
frontend/: index.html  index_temp.html  package.json
frontend-react/: index.html  package.json  vite.config.js
frontend-react/src/: App.jsx  index.css
frontend-react/src/components/: Navbar.jsx
frontend-react/src/pages/: Admin.jsx  Dashboard.jsx  Jobs.jsx  Results.jsx
frontend-react/src/services/: api.js
frontend/src/: App.css  App.jsx
frontend/src/components/: Navbar.jsx
frontend/src/pages/: Dashboard.jsx  Home.jsx  JobResults.jsx
frontend/src/utils/: api.js
routes/: admin.py  api.py  main.py
static/css/: custom.css
static/js/: dashboard.js  main.js
templates/: adapters.html  admin.html  base.html  dashboard.html  index.html  results.html
